@@ -6,7 +6,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
 -   repo: https://github.com/psf/black
-    rev: 21.5b1
+    rev: 22.10.0
     hooks:
     -   id: black
         language_version: python3
@@ -15,8 +15,8 @@ repos:
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black==21.5b1]
--   repo: https://gitlab.com/pycqa/flake8
-    rev: 5.0.4
+-   repo: https://github.com/PyCQA/flake8
+    rev: 6.0.0
     hooks:
     -   id: flake8
         additional_dependencies:
